# serializer version: 1
# name: test_climate[de-climate.keba_keenergy_12345678_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 53.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:hvac',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 22.5,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.5,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'home',
        'away',
        'comfort',
        'sleep',
        'boost',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 21.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.keba_keenergy_12345678_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate[de-climate.keba_keenergy_12345678_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.COOLING: 'cooling'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:hvac-off',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 22.5,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.5,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'home',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'home',
        'comfort',
        'sleep',
        'boost',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.keba_keenergy_12345678_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
# name: test_climate[en-climate.keba_keenergy_12345678_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 53.0,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.HEATING: 'heating'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:hvac',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 22.5,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.5,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'comfort',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'home',
        'away',
        'comfort',
        'sleep',
        'boost',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 21.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.keba_keenergy_12345678_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_climate[en-climate.keba_keenergy_12345678_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.COOLING: 'cooling'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.AUTO: 'auto'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.OFF: 'off'>,
      ]),
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:hvac-off',
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 22.5,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 17.5,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'home',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'home',
        'comfort',
        'sleep',
        'boost',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityCapabilityAttribute.TARGET_TEMP_STEP: 'target_temp_step'>: 0.5,
      <ClimateEntityStateAttribute.TEMPERATURE: 'temperature'>: 20.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.keba_keenergy_12345678_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
